#113517771787113 Fix dashboard text align Fix index page professional_renter_content style

--- a/eloue/templates/is/dashboard/sass/_reset.scss
+++ b/eloue/templates/is/dashboard/sass/_reset.scss
@@ -1,4 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -9,38 +9,39 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   border: 0;
   font-size: 100%;
   vertical-align: baseline;
+  text-align: right;
 }
- 
+
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
   display: block;
 }
- 
+
 body {
   line-height: 1;
 }
- 
+
 ol, ul {
   list-style: none;
 }
- 
+
 blockquote, q {
   quotes: none;
 }
- 
+
 blockquote {
   &:before, &:after {
     content: '';
     content: none;
   }
 }
- 
+
 q {
   &:before, &:after {
     content: '';
     content: none;
   }
 }
- 
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
@@ -50,15 +51,15 @@ a{
     text-decoration: none;
 }
 
-input, textarea, select { 
+input, textarea, select {
     margin: 0;
 }
 
-input:focus, textarea:focus, select:focus { 
+input:focus, textarea:focus, select:focus {
     outline: none;
 }
 
-textarea { 
+textarea {
     overflow: auto;
 }
 
